--- a/jeu dino/style.css
+++ b/jeu dino/style.css
@@ -30,7 +30,7 @@ header {
     font-size: 50px;
     cursor: pointer;
     margin-right: 20px;
-    color: #fff;
+    color: #ffffff;
 }
 
 .overlay {
@@ -42,51 +42,6 @@ header {
     height: 100%;
     background-color: rgba(0, 0, 0, 0.3);
     z-index: 10;
-}
-
-.search-bar {
-    position: absolute;
-    top: 0;
-    right: 100%;
-    width: 300px;
-    height: 50px;
-    transition: right 0.8s ease;
-    z-index: 20;
-    opacity: 0;
-    pointer-events: none;
-}
-
-.search-bar.active {
-    right: 15%;
-    opacity: 1;
-    pointer-events: auto;
-}
-
-.search-bar input {
-    width: 100%;
-    height: 80%;
-    padding: 10px;
-    margin-top: 40px;
-    border: none;
-    outline: none;
-    font-size: 16px;
-    border-radius: 25px;
-}
-
-.search-container {
-    display: flex;
-    align-items: center;
-    margin-right: 15px;
-}
-
-.search-icon {
-    background: none;
-    font-size: 35px;
-    border: none;
-    cursor: pointer;
-    margin-top: 8px;
-    padding: 5px;
-    color: #ffffff; /* Rose vif */
 }
 
 main {
@@ -117,7 +72,7 @@ section h2 {
 
 a {
     text-decoration: none;
-    color: #ff1493; /* Rose foncé */
+    color: #ffffff; /* Rose foncé */
 }
 
 footer {
