--- a/Crossy Road Game/style.css
+++ b/Crossy Road Game/style.css
@@ -5,6 +5,7 @@ body{
     font-family: "Press Start 2P", cursive;
     font-size: 2em;
     color: white;
+    position: relative; /* Nécessaire pour que le header soit positionné par rapport au body */
 }
 button{
     outline: none;
@@ -58,4 +59,29 @@ button{
   #controlls button:first-of-type {
     grid-column: 1/-1;
   }
-  
+  header {
+	position: absolute; /* Positionne le menu au-dessus du fond */
+	top: 0; /* Place le menu en haut de la page */
+	width: 100%; /* Prend toute la largeur de la page */
+	padding: 20px; /* Espace autour du menu */
+	display: flex;
+	box-sizing: border-box; /* Pour inclure le padding dans la largeur du header */
+	z-index: 200; /* Assure que le menu est toujours au-dessus des autres éléments */
+}
+
+.menu-container {
+	display: flex;
+	align-items: center;
+	margin-left: 915px;
+}
+
+.menu-icon {
+	font-size: 40px;
+	cursor: pointer;
+
+}
+
+a {
+	text-decoration: none;
+	color: rgb(0, 0, 0);
+}
