--- a/Snake game/style.css
+++ b/Snake game/style.css
@@ -81,8 +81,7 @@ header {
     display: flex;
     align-items: center;
     padding: 20px;
-    background-color: #222738; /* Rose vif */
-    border-bottom: 5px solid #2c2f3b; /* Rose foncé */
+    background-color: #222738;
 }
 
 #logo {
