--- a/jeu espace shooter/style.css
+++ b/jeu espace shooter/style.css
@@ -17,14 +17,13 @@ header {
   width: 100%; /* Prend toute la largeur de la page */
   padding: 20px; /* Espace autour du menu */
   display: flex;
-  justify-content: flex-end; /* Place le menu à droite */
   box-sizing: border-box; /* Pour inclure le padding dans la largeur du header */
 }
 
 .menu-container {
   display: flex;
   align-items: center;
-  margin-right: 20px;
+  margin-left: 915px;
 }
 
 .menu-icon {
