--- a/jeu dino/style.css
+++ b/jeu dino/style.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     font-family: 'Comic Sans MS', cursive, sans-serif;
-    background-color: #b3cde0; 
+    background-color: #d4d4d4; 
     color: #333;
 }
 
@@ -9,8 +9,8 @@ header {
     display: flex;
     align-items: center;
     padding: 20px;
-    background-color: #ff69b4; /* Rose vif */
-    border-bottom: 5px solid #ff1493; /* Rose foncé */
+    background-color: #333333; /* Rose vif */
+    border-bottom: 5px solid #292929; /* Rose foncé */
 }
 
 .logo {
@@ -51,24 +51,7 @@ main {
     box-sizing: border-box;
 }
 
-section {
-    flex: 1;
-    margin: 0 10px;
-    background-color: #ffb3e6; /* Rose clair */
-    padding: 20px;
-    box-sizing: border-box;
-    border-radius: 15px;
-    transition: transform 0.3s;
-}
 
-section:hover {
-    transform: scale(1.05); /* Effet de zoom sur hover */
-}
-
-section h2 {
-    text-align: center;
-    color: #ff1493; /* Rose foncé */
-}
 
 a {
     text-decoration: none;
@@ -235,13 +218,13 @@ footer {
 }
 
 .game-over-message {
-    background: #ff1493; /* Rose foncé pour le message */
+    background: #333333; /* Rose foncé pour le message */
     padding: 20px;
     border-radius: 15px;
 }
 
 #restart-button {
-    background-color: #ff69b4; /* Rose vif */
+    background-color: #292929; /* Rose vif */
     color: white;
     border: none;
     padding: 10px 20px;
@@ -252,7 +235,8 @@ footer {
 }
 
 #restart-button:hover {
-    background-color: #ff1493; /* Changer de couleur au survol */
+    background-color: #ffffff; /* Changer de couleur au survol */
+    color: black;
 }
 .obstacle-flying {
     position: absolute;
@@ -331,7 +315,7 @@ footer {
 }
 .styled-header {
     padding: 10px 20px;              /* Espacement interne */
-    background-color: #ff69b4;      /* Couleur de fond */
+    background-color: #333333;      /* Couleur de fond */
     color: white;                    /* Couleur du texte */
     border-radius: 5px;              /* Coins arrondis */
     text-align: center;              /* Centrer le texte */
@@ -339,7 +323,7 @@ footer {
 }
 
 .styled-header:hover {
-    background-color: #ff85c1; /* Changement de couleur au survol */
+    background-color: #292929; /* Changement de couleur au survol */
 }
 
 #skin-filter {
@@ -391,9 +375,10 @@ footer {
 #color-picker {
     margin-top: 10px;
     padding: 5px;
-    border: 2px solid #ff69b4; /* Bordure rose vif */
+    border: 2px solid #292929; /* Bordure rose vif */
     border-radius: 5px;
-    background-color: #ff69b4;
+    background-color: #333333;
+    color: white;
 }
 
 #color-input {
@@ -403,7 +388,7 @@ footer {
     margin-top: 10px;
     padding: 10px 20px;
     cursor: pointer;
-    background-color: #ff69b4;
+    background-color: #333333;
     color: white;
     border: none;
     border-radius: 5px;
