--- a/jeu dino/style.css
+++ b/jeu dino/style.css
@@ -32,7 +32,9 @@ header {
     margin-right: 20px;
     color: #ffffff;
 }
-
+.menu-icon:hover {
+    transform: scale(1.12); /* Effet de zoom sur hover */
+}
 .overlay {
     display: none; /* Masqué par défaut */
     position: fixed;
