--- a/Flappy bird/style.css
+++ b/Flappy bird/style.css
@@ -115,7 +115,9 @@ header {
 	cursor: pointer;
 	color: #fff;
 }
-
+.menu-icon:hover {
+    transform: scale(1.12); /* Effet de zoom sur hover */
+}
 a {
 	text-decoration: none;
 	color: rgb(255, 255, 255);
