--- a/jeu espace shooter/style.css
+++ b/jeu espace shooter/style.css
@@ -31,7 +31,9 @@ header {
   cursor: pointer;
   color: #fff;
 }
-
+.menu-icon:hover {
+  transform: scale(1.12); /* Effet de zoom sur hover */
+}
 a {
   text-decoration: none;
   color: rgb(255, 255, 255);
