--- a/style.css
+++ b/style.css
@@ -36,7 +36,9 @@ header {
     margin-right: 20px;
     color: #fff;
 }
-
+.menu-icon:hover {
+    transform: scale(1.12); /* Effet de zoom sur hover */
+}
 .overlay {
     display: none; /* Masqué par défaut */
     position: fixed;
@@ -203,7 +205,12 @@ footer {
     animation: gradient-animation 10s ease infinite; /* Durée et type d'animation */
 }
 .car {
-    background: linear-gradient(270deg, #979797, #ffffff, #979797, #ffffff);
+    background: linear-gradient(270deg, #979797, #dddddd, #979797, #dddddd);
+    background-size: 400% 400%; /* Pour permettre à l'animation de bouger */
+    animation: gradient-animation 10s ease infinite; /* Durée et type d'animation */
+}
+.Pong-Game {
+    background: linear-gradient(270deg, #ffefba, #892eff, #ffefba, #892eff);
     background-size: 400% 400%; /* Pour permettre à l'animation de bouger */
     animation: gradient-animation 10s ease infinite; /* Durée et type d'animation */
 }
