--- a/tour/style.css
+++ b/tour/style.css
@@ -155,7 +155,9 @@ header {
     margin-right: 70px;
     color: #000000;
 }
-
+.menu-icon:hover {
+    transform: scale(1.12); /* Effet de zoom sur hover */
+}
 #overlay {
     display: none; /* Masqué par défaut */
     position: fixed;
