--- a/Snake game/style.css
+++ b/Snake game/style.css
@@ -103,7 +103,7 @@ header {
     margin-right: 20px;
     color: #fff;
 }
-.menu-icon:hover {
+#menu-icon:hover {
   transform: scale(1.12); /* Effet de zoom sur hover */
 }
 #overlay {
